<resources>
    <string name="app_name">Place Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Cài đặt</string>
    <string name="signin">Đăng nhập</string>
    <string name="cancel">Hủy</string>
    <string name="password">Mật khẩu</string>
    <string name="username">Tên</string>

    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>

    <string name="nav_map">Map</string>
    <string name="nav_photos">Danh sách</string>
    <string name="nav_scheduler">Lịch checkin</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Cài đặt</string>
    <string name="nav_about_us">Thông tin ứng dụng</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_username">Tên đăng nhập</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">Đăng xuất</string>
    <string name="name">Fullname</string>
    <string name="addnew_localtion">Thêm địa điểm hiện tại</string>
    <string name="txtName">Tên vị trí</string>
    <string name="txtLag">Kinh độ</string>
    <string name="txtAddress">Địa chỉ</string>
    <string name="btnAddNew">Thêm mới</string>
    <string name="txtPhone">Phone</string>
    <string name="txtEmail">Email</string>
    <string name="btnChecked">Chưa checkin</string>
    <string name="btnViewMap">Xem Map</string>
    <string name="viewdetail_localtion">Thông tin chi tiết</string>
    <string name="txt_anh_dai_dien">Ảnh đại diện</string>
    <string name="copyright">\@Copyright by PlaceMap 2016</string>
    <string name="version">Place map version 2.0.0</string>
    <string name="open_location_settings">Cài đặt</string>
    <string name="gps_network_not_enabled">Cài đặt GPS</string>
    <string name="Cancel">Hủy</string>
    <string name="not_network">Không có kết nối Internet.</string>
    <string name="btnUploadToServer">Tải lên</string>
    <string name="upload_to_server">Tải ảnh</string>
    <string name="txt_chua_checkin">Hiện trạng: Chưa checkin</string>
    <string name="txtCode">Mã khách hàng</string>
    <string name="btnEdit">Sửa</string>
    <string name="btnUpdate">Cập nhật</string>
    <string name="edit_localtion">Sửa địa điểm</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Map</item>
        <item>Danh sách</item>
        <item>Lịch checkin</item>
        <item>Thông tin ứng dụng</item>
        <item>Đăng xuất</item>
    </string-array>
</resources>
